.gradle/gradle.log
WARNING: You are using an unsupported version of ForgeGradle.
Please consider upgrading to ForgeGradle 5 and helping in the efforts to get old versions working on the modern toolchain.
See https://gist.github.com/TheCurle/fe7ad3ede188cbdd15c235cc75d52d4a for more info on contributing.
#################################################
         ForgeGradle 2.1.3-g6a7c715        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
               Powered by MCP unknown               
             http://modcoderpack.com             
         by: Searge, ProfMobius, Fesh0r,         
         R4wk, ZeuX, IngisKahn, bspkrs           
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:sourceApiJava
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavaC:\Users\horizo\Desktop\newclient\build\sources\main\java\com\amethyst\client\HUDEditorGUI.java:267: error: method resolveScoreboardX(ScaledResolution) is already defined in class HUDEditorGUI
    private int resolveScoreboardX(ScaledResolution sr) {
                ^
C:\Users\horizo\Desktop\newclient\build\sources\main\java\com\amethyst\client\HUDEditorGUI.java:271: error: method resolveChatY(ScaledResolution) is already defined in class HUDEditorGUI
    private int resolveChatY(ScaledResolution sr) {
                ^
2 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 31.844 secs
